# BatterySimulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
battery_simulator/: __init__.py  app.py  cli.py
battery_simulator/chemistry/: __init__.py  base_chemistry.py  lfp.py  lto.py  nca.py  nmc811.py  pack_config.py  pybamm_params.py
battery_simulator/core/: __init__.py  battery_model.py  degradation.py  lfp_paper_degradation.py  pack_simulator.py  pybamm_model.py  simulator.py  thermal_model.py
battery_simulator/outputs/: __init__.py  arbin_format.py  base_writer.py  biologic_format.py  csv_writer.py  neware_format.py
battery_simulator/protocols/: __init__.py  base_protocol.py  calendar_aging.py  cycle_life.py  formation.py  rate_capability.py  rpt.py
battery_simulator/utils/: __init__.py  config_loader.py  noise_generator.py  validators.py
config/examples/: cycle_life.yaml
tests/: __init__.py  test_app.py  test_battery_model.py  test_lfp_paper_degradation.py  test_protocols.py  test_pybamm_integration.py  test_simulator.py
